# uv-production-grade

./: .env  .env.local  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  main.py  pyproject.toml  pytest.ini  requirements.in  requirements.txt  run_local.sh  run_tests.sh  start.sh
backend/app/api/v1/: __init__.py  auth.py  categories.py  debug.py  notifications.py  priorities.py  todos.py  users.py  webhooks.py  websockets.py
backend/app/core/: config.py  db.py  init_db.py
backend/app/dal/: db_service.py
backend/app/middleware/: auth_debug.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 13296bd3591c_fix_relationships_4.py  38e4bf0477a5_fix_relationships.py  460b4db1450a_fix_relationships.py  533ffea5d82a_fix_relationships6.py  71139a54084d_first_migration.py  8597aa5e07b8_fix_relationships_3.py  95d87a145ef7_fix_relationships5.py  c31a465d865d_fix_relationships_2.py
backend/app/models/: __init__.py  tables.py
backend/app/schemas/: __init__.py  base.py  category.py  priority.py  todo.py  user.py  webhook.py
backend/app/scripts/: docker-entrypoint.sh
backend/app/users/: auth.py  security.py  users.py
backend/app/websockets/: manager.py
backend/tests/: conftest.py  conftest_utils.py  test_config.py  tests_data.json
backend/tests/api/: test_categories.py  test_priorities.py  test_todos.py
e2e/: playwright.config.ts
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  run_local.sh  tailwind.config.js  tsconfig.json
frontend/config/: webpack.config.js
(+39 files in other folders)
